--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@
 # remote_theme: mmistakes/so-simple-theme
 skin: "/assets/css/skins/default.css"
 locale: es-MX
-title: "El Diario de Kajii Narumi"
+title: "El diario de Kajii Narumi"
 description: "Para los que amamos la palabra escrita"
 baseurl: # the subpath of your site, e.g. "/blog"
 url: # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
