--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,18 +2,20 @@
 
 - title: Home
   url: /
+# - title: Posts
+#   url: /posts/
+- title: Categories
+  url: /categories/
+- title: Tags
+  url: /tags/
+# - title: Recipes
+#   url: /recipes/
+- title: Search
+  url: /search/
+- title: YouTube
+  url: https://www.youtube.com/@KajiiNarumi
+- title: Web
+  url: https://kajiinarumi.com/
 - title: Theme
   url: "#"
   id: theme-toggle
-# - title: Posts
-#   url: /posts/
-# - title: Categories
-#   url: /categories/
-# - title: Tags
-#   url: /tags/
-# - title: Recipes
-#   url: /recipes/
-# - title: Search
-#   url: /search/
-# - title: External Page
-#   url: https://the-page.com/you-want-to-link-to.html
