--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ description: "Para los que amamos la palabra escrita"
 url: "https://kajiinarumi.github.io"
 baseurl: "/Blog"
 logo: "/images/logo.png"
-image: "/images/logo.png"
+image: "/Blog/images/logo.png"
 date_format: "%B %-d, %Y"
 read_time: # reading time estimates, e.g. true
 words_per_minute: # 200
