--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -3,7 +3,7 @@
 
 Kajii Narumi:
   name: Kajii Narumi
-  picture: /images/bio-photo-2.jpg
+  picture: /Blog/images/logo.png
 #  twitter: "@billyrick"
 #  links:
 #    - title: Twitter
