--- a/_config.yml
+++ b/_config.yml
@@ -42,6 +42,10 @@ disqus:
 twitter:
   username: # site's Twitter username, e.g. "mmistakes"
 
+#feed
+feed:
+  path: atom.xml
+  template: _includes/feed.xml
 # Liquid
 liquid:
   error_mode: strict
