--- a/_config.yml
+++ b/_config.yml
@@ -20,8 +20,8 @@ locale: es-MX
 title: "El diario de Kajii Narumi"
 description: "Para los que amamos la palabra escrita"
 excerpt: "Para los que amamos la palabra escrita. El diario de Kajii Narumi"
-url: "https://kajiinarumi.github.io"
-baseurl: "/Blog"
+url: "https://blog.kajiinarumi.com"
+baseurl: ""
 logo: "/images/logo.png"
 image: "/Blog/images/logo.png"
 icon: "Blog/images/logo.png"
