--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,8 +8,8 @@
   url: /categories/
 - title: Tags
   url: /tags/
-- title: Notes
-  url: /notes/
+- title: Asuntos
+  url: /asuntos/
 - title: Search
   url: /search/
 - title: Theme
