--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,8 @@
 # Sample site navigation bar links
 
 - title: Casa
+  url: https://kajiinarumi.com/
+- title: Blog
   url: /
 # - title: Posts
 #  url: /posts/
