--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,9 +1,10 @@
 # Sample Authors
 # Remove file or replace with your own
 
-Kajii Narumi:
-  name: Kajii Narumi
+I. Antoine Suárez V.:
+  name: "I. Antoine Suárez V."
   picture: /Blog/images/logo.png
+  url: "https://iasuarezv.wordpress.com/"
 #  twitter: "@billyrick"
 #  links:
 #    - title: Twitter
