--- a/_config.yml
+++ b/_config.yml
@@ -101,7 +101,7 @@ author:
   name: Kajii Narumi
   picture: /Blog/images/logo.png
   email:
-  twitter:
+  url:
   links:
     - title:
       url:
